# CellActivityRecordingSimulator

./: .gitignore  README.md  build_exe.spec  main.py  pyproject.toml  setup.py  template_maker_cli.py  test.ipynb  test_config_runner.py  test_gpu_optimization.py  test_kilosort_templates.py  tutrial_carsObj.ipynb
analyzer_spykingcircus2_default/: recording.json  sorting_provenance.json  sparsity_mask.npy
analyzer_spykingcircus2_default/extensions/correlograms/: bins.npy  info.json  params.json  run_info.json
analyzer_spykingcircus2_default/extensions/noise_levels/: info.json  noise_levels.npy  run_info.json
analyzer_spykingcircus2_default/extensions/random_spikes/: random_spikes_indices.npy  run_info.json
analyzer_spykingcircus2_default/extensions/spike_amplitudes/: amplitudes.npy  info.json  params.json  run_info.json
analyzer_spykingcircus2_default/extensions/spike_locations/: info.json  params.json  spike_locations.npy
analyzer_spykingcircus2_default/recording_info/: recording_attributes.json
analyzer_spykingcircus2_default/sorting/: provenance.json  si_folder.json  spikes.npy
default/: KS_probe.json
examples/: template_maker_config.json  template_maker_config_advanced.json  template_maker_config_euclidean_0-2.json
preprocessed_data_for_dartsort_default/: binary.json
preprocessed_data_for_spykingcircus2_default/: si_folder.json
preprocessed_data_for_spykingcircus2_default/properties/: contact_vector.npy  location.npy
spykingcircus2_default/: spikeinterface_log.json  spikeinterface_params.json  spikeinterface_recording.json
spykingcircus2_default/sorter_output/: preprocessed_recording.json
src/cellactivityrecodingsimulater/: BaseObject.py  BaseSettings.py  Cell.py  Noise.py  Settings.py  Site.py  Template.py  __init__.py  calculate.py  carsIO.py  generate.py  main.py  simulate.py  tools.py
src/cellactivityrecodingsimulater/plot/: main.py  (+1 more)
src/cellactivityrecodingsimulator/: BackGroundUnitsObject.py  BaseObject.py  BaseSettings.py  BaseSignal.py  CarsObject.py  Cell.py  Contact.py  GroundTruthUnitObject.py  GroundTruthUnitsObject.py  Noise.py  ProbeObject.py  Settings.py  Site.py  Template.py  Unit.py  __init__.py  calculate.py  carsIO.py  generate.py  gpu_utils.py  main.py  tools.py
src/templateMaker/: __init__.py  config_runner.py  config_schema.py  main.py  template_analyzer.py
src/testData/: test_cells.json  test_settings.json  test_sites.json
test/: BaseObject.py  Cell.py  Site.py  Template.py  __init__.py  carsIO.py  main.py  simulate.py
tests/data/: test_cells.json  test_settings.json  test_sites.json
(+83 files in other folders)
