[project]
name = "cellactivityrecodingsimulator"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "void1211", email = "g2154488@cc.kyoto-su.ac.jp" }
]
dependencies = [
    "pydantic>=2.11.7",
    "numpy<2.3",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "chardet>=5.2.0",
    "spikeinterface>=0.103.0",
    "pytest>=8.4.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cellactivityrecodingsimulator"]

[tool.rye.scripts]
main = "python main.py"

[tool.pytest.ini_options]
testpaths = ["src/cellactivityrecodingsimulator"]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
